# longtext-analysis

./: .editorconfig  .env.example  .eslintrc.json  .flake8  .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.md  TODOs.md  TODOs_archive_20251226.md  TODOs_archive_20251228.md  cursor-master-sequence.md  delete_timeline_caches.py  pyproject.toml
.cursor/commands/: gen-proj-rules.md
.cursor/rules/: api-contract-sync.mdc  (+8 more)
backend/: main.py
devstory/: longcontext_phase_0.md  longcontext_phase_0_1.md  longcontext_phase_1.md  longcontext_phase_3_1.md  longcontext_phase_3_2.md  longcontext_phase_3_3.md  longcontext_phase_3_4.md  longcontext_phase_4_1.md  longcontext_phase_4_2.md  longcontext_phase_4_3.md  longcontext_phase_4_4.md  longcontext_phase_4_5.md  longcontext_phase_5_1.md  longcontext_phase_6_1.md  longcontext_phase_7_1.md  longcontext_phase_8_1.md
docs/: PRD_longtext.md  cache_manager.py  instruction_detail.md  instruction_moredetail.md  llm_chains.py  longcontext_phase_2.md  phase10_browser_quality_check.md  phase3_1_evaluation.md  phase3_2_e2e_analysis.md  phase3_4_type_system_improvement.md  phase3_improvement_plan.md  phase8_10_integration_test.md  phase8_10_test_results.md  phase8_2_browser_test.md  phase8_2_browser_test_quick.md  todos_copy.md  수동검증_html에 기록.txt
scripts/: analyze_api_e2e_results.py  analyze_issue_card_quality.py  analyze_manual_review_notes.py  analyze_server_logs.py  check_api_e2e_results.py  check_artifact_results.py  check_body_code_blocks.py  check_body_code_blocks_phase_4_3.py  check_pipeline_cache_unification.py  compare_results_consistency.py  compare_timeline_results.py  create-shortcut.bat  create-shortcut.ps1  create_events_for_review.py  create_golden_file.py  create_html_review.py  debug_code_fence_in_body.py  debug_turn_36.py  evaluate_manual_review.py  evaluate_timeline_quality.py  parse_text_review_to_json.py  root_cause_analysis.py  start-all.bat  start-all.ps1  start-backend.ps1  start-frontend.ps1  verify_api_contract.py
tests/: conftest.py  conftest_e2e.py  test_api_e2e.py  test_api_phase10.py  test_event_normalizer.py  test_event_normalizer_e2e.py  test_issues_builder.py  test_issues_builder_v2.py  test_llm_service.py  test_logging_minimal.py  test_logging_with_fixture.py  test_logging_without_fixture.py  test_longcontext_parsing.py  test_nested_code_blocks.py  test_parser.py  test_parser_e2e.py  test_pipeline_cache.py  test_pipeline_e2e_phase10.py  test_pipeline_fixtures.py  test_snippet_e2e.py  test_snippet_manager.py  test_timeline_builder.py  test_timeline_issues_e2e.py  timeline_issues_e2e_llm_20251226_130658.json
(+63 files in other folders)
